[package]
name = "rust-monolith"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
poem-openapi = { version = "5.0.2", features = ["swagger-ui"] }
poem = "3.0.1"
rand = "0.8.5"
anyhow = "1.0.86"
